tests/aster/x/mochi/rosetta/cusip.error
error[A024]: unknown function indexOf
  --> /workspace/mochi/tests/rosetta/x/Mochi/cusip.mochi:4:13

  4 |   var idx = indexOf(upper, ch)
    |             ^

help:
  Declare indexOf before use
